# societyos

./: .env.example  .gitignore  README.md  pyproject.toml
configs/examples/: startup_board.yaml
frontend/: index.html
societyos/: cli.py  qwen_client.py  settings.py
societyos.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
societyos/agents/: base.py  factory.py  prompt.py  proposal.py
societyos/agents/memory/: base.py  factory.py  none.py  short_term.py
societyos/config/: loader.py  models.py
societyos/db/: connection.py  migrations.py
societyos/db/queries/: events.py  reports.py  reputation.py  runs.py  votes.py
societyos/server/: app.py
societyos/server/routes/: runs.py
societyos/society/: blackboard.py  coordinator.py  events.py  runner.py
societyos/society/voting/: base.py  consensus.py  factory.py  majority.py  weighted.py
tests/: test_agents.py  test_config.py  test_health.py  test_orchestration.py  test_persistence.py
